--- a/main.html
+++ b/main.html
@@ -4,38 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Calculator</title>
 </head>
 <body>
-    <div class="container">
-        <div class="calculator">
-            <div class="result">
-                <div class="history">
-                    <p class="history-value"></p>
+    <div id="container">
+        <div class="calculartor">
+            <div id="result">
+                <div id="history">
+                    <p id="history-value"></p>
                 </div>
-                <div class="input">
-                    <p class="input-value"></p>
+                <div id="input">
+                    <p id="input-value"></p>
                 </div>
             </div>
-            <div class="keyboard">
-                <div class="numbers"><button id="9">9</button></div>
-                <div class="numbers"><button id="8">8</button></div>
-                <div class="numbers"><button id="7">7</button></div>
-                <div class="numbers"><button id="6">6</button></div>
-                <div class="numbers"><button id="5">5</button></div>
-                <div class="numbers"><button id="4">4</button></div>
-                <div class="numbers"><button id="3">3</button></div>
-                <div class="numbers"><button id="2">2</button></div>
-                <div class="numbers"><button id="1">1</button></div>
-                <div class="numbers"><button id="0">0</button></div>
-                <div class="operator"><button id="+">+</button></div>
-                <div class="operator"><button id="-">-</button></div>
-                <div class="operator"><button id="/">/</button></div>
-                <div class="operator"><button id="x">x</button></div>
-                <div class="operator"><button id="%">%</button></div>
-                <div class="operator"><button id="C">C</button></div>
-                <div class="operator"><button id="AC">AC</button></div>
-            </div>
+        </div>
+        <div id="keyboard">
+            <button class="number">9</button>
+            <button class="number">8</button>
+            <button class="number">7</button>
+            <button class="number">6</button>
+            <button class="number">5</button>
+            <button class="number">4</button>
+            <button class="number">3</button>
+            <button class="number">2</button>
+            <button class="number">1</button>
+            <button class="number">0</button>
+            <button class="operator">+</button>
+            <button class="operator">-</button>
+            <button class="operator">/</button>
+            <button class="operator">*</button>
+            <button class="operator">C</button>
+            <button class="operator">AC</button>
         </div>
     </div>
     <script src="app.js"></script>
