--- a/main.html
+++ b/main.html
@@ -4,37 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Calculator</title>
+    <title>Document</title>
 </head>
 <body>
-    <div id="container">
-        <div class="calculartor">
-            <div id="result">
-                <div id="history">
-                    <p id="history-value"></p>
-                </div>
-                <div id="input">
-                    <p id="input-value"></p>
-                </div>
+    <div class="calculator">
+        <div class="screan">
+            <div class="history">
+                <p class="history-value"></p>
             </div>
-        </div>
-        <div id="keyboard">
-            <button class="number">9</button>
-            <button class="number">8</button>
-            <button class="number">7</button>
-            <button class="number">6</button>
-            <button class="number">5</button>
-            <button class="number">4</button>
-            <button class="number">3</button>
-            <button class="number">2</button>
-            <button class="number">1</button>
-            <button class="number">0</button>
-            <button class="operator">+</button>
-            <button class="operator">-</button>
-            <button class="operator">/</button>
-            <button class="operator">*</button>
-            <button class="operator">C</button>
-            <button class="operator">AC</button>
+            <div class="input">
+                <p class="input-value"></p>
+            </div>
+            <div class="keyboard">
+                <button class="number" id="0">0</button>
+                <button class="number" id="1">1</button>
+                <button class="number" id="2">2</button>
+                <button class="number" id="3">3</button>
+                <button class="number" id="4">4</button>
+                <button class="number" id="5">5</button>
+                <button class="number" id="6">6</button>
+                <button class="number" id="7">7</button>
+                <button class="number" id="8">8</button>
+                <button class="number" id="9">9</button>
+                <button class="operator" id="-">-</button>
+                <button class="operator" id="+">+</button>
+                <button class="operator" id="/">/</button>
+                <button class="operator" id="*">*</button>
+                <button class="operator" id="=">=</button>
+                <button class="operator" id="clear">C</button>
+                <button class="operator" id="backspace">AC</button>
+            </div>
         </div>
     </div>
     <script src="app.js"></script>
